--- a/team_stage/style.css
+++ b/team_stage/style.css
@@ -26,7 +26,7 @@ body {
 	font-family: 'Ubuntu', sans-serif;
 	box-shadow: 0 0 30px 0 black;
 	border-radius: 10px;
-	padding-bottom: 70%;
+	padding-bottom: 10px;
 	margin-bottom: 20px;
 }
 
